# gDel3D

./: CMakeLists.txt
GDelFlipping/src/: DelaunayChecker.cu  Demo.cu  InputCreator.cu
GDelFlipping/src/gDel3D/CPU/: PredWrapper.cu  Splaying.cu  Star.cu
GDelFlipping/src/gDel3D/GPU/: KerCommon.h  KerPredicates.cu
